[project]
name = "philipstv-gui"
dynamic = ["version"]
description = "GUI remote for Philips Android-powered TVs."
readme = "README.md"
requires-python = ">=3.10"
maintainers = [{ name = "Bazyli Cyran", email = "bazyli@cyran.dev" }]
keywords = ["philips", "tv", "remote", "ambilight", "gui"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["philipstv>=0.4", "appdirs>=1.4.4", "ttkbootstrap>=1.7.3"]

[project.urls]
repository = "https://github.com/bcyran/philipstv-gui"

[project.gui-scripts]
philipstv-gui = "philipstv_gui.__main__:main"

[tool.poetry]
license = "MIT"
packages = [{ include = "philipstv_gui", from = "src" }]
include = [{ path = "src/philipstv_gui/**/*.py" }]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.1.0"
flake8 = "^7.3.0"
mypy = "^1.18"
tox = "^4.30.3"
types-appdirs = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = """(?x)
^(?P<base>\\d+(\\.\\d+)*)
(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?
(\\+(?P<tagged_metadata>.+))?$
"""

[tool.poetry-dynamic-versioning.substitution]
files = ["src/philipstv-gui/__init__.py"]

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "ttkbootstrap.*"
ignore_missing_imports = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
